fixed some spacing

--- a/Django/experts/static/experts/home.css
+++ b/Django/experts/static/experts/home.css
@@ -36,6 +36,6 @@
     padding: 20px;
     text-align: left;
     position: relative;
-    top: -900px;
-    left: 1500px;
+    top: -850px;
+    left: 975px;
 }
